k8s/dz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dz-api
  namespace: default
  labels:
    app: dz-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dz-api
  template:
    metadata:
      labels:
        app: dz-api
    spec:
      containers:
      - name: dz-api
        image: savindufernando/fyp-dz-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: dz-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: dz-api
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 8000
